--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }} {% if page.title %} – {% endif %}</title>
-	 <<link rel="stylesheet" href="/css/carlton.css" type="text/css" media="screen" title="banks" charset="utf-8">>
+	 <link rel="stylesheet" href="/css/carlton.css" type="text/css" media="screen" title="banks" charset="utf-8">
    <meta name="author" content="{{ site.author.name }}" />
 </head>
 <body>
