--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
     <header>
         <h1><a href="/">{{ site.title }}</a></h1>
     </header>
-    {{ content }}
+		<main>
+    	{{ content }}
+		</main>
 		<script type="text/javascript">
 		  (function() {
 		    var config = {
