--- a/css/carlton.css
+++ b/css/carlton.css
@@ -18,7 +18,6 @@ html, body {
 body {
   background-color: white;
   font: 13.34px helvetica, arial, clean, sans-serif;
-  *font-size: small;
   text-align: center;
 }
 
@@ -27,7 +26,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  margin-bottom: 1em;
+  margin-bottom: 1em; 
+  font-family: "alternate-gothic-no-2-d-1","alternate-gothic-no-2-d-2";
 }
 
 p {
@@ -66,10 +66,11 @@ ul.posts {
     line-height: 1.75em;
   }
 
-  ul.posts span {
+  ul.posts .postDate {
     color: #aaa;
     font-family: Monaco, "Courier New", monospace;
     font-size: 80%;
+		float: right;
   }
 
 /*****************************************************************************/
@@ -78,7 +79,7 @@ ul.posts {
 /*
 /*****************************************************************************/
 
-.site {
+main {
   font-size: 110%;
   text-align: justify;
   width: 42em;
@@ -92,30 +93,30 @@ ul.posts {
   margin-bottom: 2em;
 }
 
-  .site .title a {
+  main .title a {
     color: #a00;
     text-decoration: none;
   }
 
-  .site .title a:hover {
+  main .title a:hover {
     color: black;
   }
 
-  .site .title a.extra {
+  main .title a.extra {
     color: #aaa;
     text-decoration: none;
     margin-left: 1em;
   }
 
-  .site .title a.extra:hover {
+  main .title a.extra:hover {
     color: black;
   }
 
-  .site .meta {
+  main .meta {
     color: #aaa;
   }
 
-  .site .footer {
+  main .footer {
     font-size: 80%;
     color: #666;
     border-top: 4px solid #eee;
@@ -123,22 +124,22 @@ ul.posts {
     overflow: hidden;
   }
 
-    .site .footer .contact {
+    main .footer .contact {
       float: left;
       margin-right: 3em;
     }
 
-      .site .footer .contact a {
+      main .footer .contact a {
         color: #8085C1;
       }
 
-    .site .footer .rss {
+    main .footer .rss {
       margin-top: 1.1em;
       margin-right: -.2em;
       float: right;
     }
 
-      .site .footer .rss img {
+      main .footer .rss img {
         border: 0;
       }
 
