--- a/css/carlton.css
+++ b/css/carlton.css
@@ -22,11 +22,11 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
+	text-align: left;
 }
 
 h1 {
-  margin-bottom: 1em; 
+  margin: 1em 0; 
   font-family: "alternate-gothic-no-2-d-1","alternate-gothic-no-2-d-2";
 }
 
