--- a/css/carlton.css
+++ b/css/carlton.css
@@ -17,7 +17,7 @@ html, body {
 
 body {
   background-color: white;
-  font: 16px helvetica, arial, clean, sans-serif;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
   text-align: center;
 }
 
