--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,6 @@
 	<title>{{ page.title }} {% if page.title %} – {% endif %}</title>
 	<link rel="stylesheet" href="/css/carlton.css" type="text/css" media="screen" title="banks" charset="utf-8">
 	<meta name="author" content="{{ site.author.name }}" />
-	<script type="text/javascript">
-		(function() {
-		  var config = {
-		    kitId: 'myy7ipg',
-		    scriptTimeout: 3000
-		  };
-		  var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
-	})();
-	</script>
 </head>
 <body>
 	<div class="site">
@@ -24,5 +15,15 @@
     	{{ content }}
 		</main>
 	</div>
+	<script type="text/javascript" src="js/turbolinks.js"></script>
+	<script type="text/javascript">
+		(function() {
+		  var config = {
+		    kitId: 'myy7ipg',
+		    scriptTimeout: 3000
+		  };
+		  var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
+	})();
+	</script>
 </body>
 </html>
