--- a/css/carlton.css
+++ b/css/carlton.css
@@ -27,7 +27,14 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   margin: 1em 0; 
-	font-size: 120%;
+	font-size: 200%;
+  font-family: "alternate-gothic-no-2-d-1","alternate-gothic-no-2-d-2";
+}
+
+
+h2 {
+  margin: 1em 0; 
+	font-size: 140%;
   font-family: "alternate-gothic-no-2-d-1","alternate-gothic-no-2-d-2";
 }
 
