--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     	{{ content }}
 		</main>
 	</div>
-	<script type="text/javascript" src="js/turbolinks.js"></script>
+	<script type="text/javascript" src="//js/turbolinks.js"></script>
 	<script type="text/javascript">
 		(function() {
 		  var config = {
