--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-uk">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>{{ page.title }} {% if page.title %} – {% endif %}</title>
+	<title>{{ site.title }} {% if page.title %} – {% endif %}</title>
 	<link rel="stylesheet" href="{{site.production_url}}/css/carlton.css" type="text/css" media="screen" title="banks" charset="utf-8">
 	<meta name="author" content="{{ site.author.name }}" />
 	<script type="text/javascript">
