--- a/css/carlton.css
+++ b/css/carlton.css
@@ -60,6 +60,10 @@ table {
   font: 100%;
 }
 
+img {
+  max-width: 34em;
+}
+
 /*****************************************************************************/
 /*
 /* Home
