--- a/css/carlton.css
+++ b/css/carlton.css
@@ -23,7 +23,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	text-align: left;
-  margin-bottom: 12px;
+mv: rename carlton.css to banks.css: No such file or directory
 }
 
 h1 {
@@ -209,3 +209,32 @@ ul.posts {
   #related h2 {
     margin-bottom: 1em;
 	}
+
+/*****************************************************************************/
+/*
+/* Shit
+/*
+/*****************************************************************************/
+
+.bookmarklet {
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  -ms-border-radius:4px;
+  -o-border-radius:4px;
+  border-radius:4px;
+  font-size:1.25em;
+  position:relative;
+  cursor:move;
+  color:#fff;
+  text-decoration:none;
+  background:rgba(0,0,0,0.25);
+  padding:10px 20px 8px;
+  margin:0 0 10px 0;
+  display:inline-block
+}
+  
+.bookmarklet ~ span {
+  display:inline-block;
+  margin:0 0 0 10px;
+  font-size:.8em
+}
