--- a/css/carlton.css
+++ b/css/carlton.css
@@ -34,6 +34,7 @@ h1 {
 h2 {
   margin: 1em 0; 
 	font-size: 180%;
+  font-weight: medium;
   font-family: "alternate-gothic-no-2-d-1","alternate-gothic-no-2-d-2";
 }
 
