--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,20 +5,11 @@
   <title>{{ site.title }}{% if page.title %} | {{ page.title }} {% endif %}</title>
 	<link rel="stylesheet" href="/carlton/banks.css" type="text/css" media="screen" title="banks" charset="utf-8">
 	<meta name="author" content="{{ site.author.name }}" />
-	<script type="text/javascript">
-		(function() {
-		  var config = {
-		    kitId: 'myy7ipg',
-		    scriptTimeout: 3000
-		  };
-		  var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
-	})();
-	</script>
-</head>
+	</head>
 <body>
 	<div class="site">
     <header>
-        <h1><a href="/">{{ site.title }}</a></h1>
+        <h1><a href="/">{{ site.title }}<span class="cursor"></span></a></h1>
     </header>
     <main>
     	{{ content }}
