--- a/carlton/banks.css
+++ b/carlton/banks.css
@@ -16,26 +16,49 @@ html, body {
 }
 
 body {
-  background-color: white;
-  font-family: "Helvetica Neue", "Arial", sans-serif;
+  background-color: #333;
+  font-family:  "Courier New", courier, monospace;
+  color: #00dd00;
   text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	text-align: left;
+  font-weight: normal;
 }
 
 h1 {
   margin: 1em 0; 
 	font-size: 260%;
-  font-family: "freight-sans-pro-1", "freight-sans-pro-2";
 }
 
 h2 {
   margin: 1em 0; 
 	font-size: 130%;
   font-weight: medium;
-  font-family: "freight-sans-pro-1", "freight-sans-pro-2";
+}
+
+
+@-webkit-keyframes blink {
+    from, to { border-color: transparent }
+    50% { border-color: #00dd00 }
+}
+
+@-moz-keyframes blink {
+    from, to { border-color: transparent }
+    50% { border-color: #00dd00 }
+}
+
+h1 span {
+    width:10px;
+    height:5px;
+    line-height:10px;
+    padding: -10px 5px;
+    margin-left:5px;
+    border-left:15px solid #00dd00;
+
+    -webkit-animation: 1.75s blink step-end infinite;
+    -moz-animation: 1.75s blink step-end infinite;
 }
 
 .wf-loading {
@@ -48,10 +71,11 @@ h2 {
 
 p {
   margin: 1em 0;
+  text-align: left;
 }
 
 a {
-  color: #232621;
+  color: #00dd00;
 }
 
 a:hover {
@@ -59,7 +83,7 @@ a:hover {
 }
 
 a:visited {
-  color: #232621;
+  color: #00dd00;
 }
 
 table {
@@ -84,11 +108,12 @@ ul.posts {
 
   ul.posts li {
     line-height: 1.75em;
+    text-align: left;
   }
 
   ul.posts .postDate {
     color: #aaa;
-    font-family: Monaco, "Courier New", monospace;
+    font-family: "Courier New", monospace;
     font-size: 80%;
 		float: right;
   }
