--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,10 @@
     <main>
     	{{ content }}
     </main>
+    <footer class="footer">
+      <a href="/">index</a> . 
+      <a href="/about">about</a>
+    </footer>
 	</div>
   <script type="text/javascript" src="{{site.production_url}}/js/turbolinks.js"></script>
   <script>
