--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,21 +5,9 @@
   <title>{{ site.title }}{% if page.title %} | {{ page.title }} {% endif %}</title>
 	<link rel="stylesheet" href="/carlton/banks.css" type="text/css" media="screen" title="banks" charset="utf-8">
 	<meta name="author" content="{{ site.author.name }}" />
-	</head>
-<body>
-	<div class="site">
-    <header>
-        <h1><a href="/">{{ site.title }}<span class="cursor"></span></a></h1>
-    </header>
-    <main>
-    	{{ content }}
-    </main>
-    <footer class="footer">
-      <a href="/">index</a> . 
-      <a href="/about">about</a>
-    </footer>
-	</div>
-  <script type="text/javascript" src="{{site.production_url}}/js/turbolinks.js"></script>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/js.js"></script>
+  <script src="/js/turbolinks.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,5 +18,19 @@
     ga('send', 'pageview');
 
   </script>
+	</head>
+<body>
+	<div class="site">
+    <header>
+        <h1><a href="/">{{ site.title }}<span class="cursor"></span></a></h1>
+    </header>
+    <main id="content">
+    	{{ content }}
+    </main>
+    <footer class="footer">
+      <a href="/">index</a> . 
+      <a href="/about">about</a>
+    </footer>
+  </div>
 </body>
 </html>
