--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-uk">
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>{{ site.title }}{% if page.title %} | {{ page.title }} {% endif %}</title>
-	<link rel="stylesheet" href="/carlton/banks.css" type="text/css" media="screen" title="banks" charset="utf-8">
-	<meta name="author" content="{{ site.author.name }}" />
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/js.js"></script>
-  <script src="/js/turbolinks.js"></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-39750141-1', 'drj.xxx');
-    ga('send', 'pageview');
-
-  </script>
-	</head>
-<body>
-	<div class="site">
-    <header>
-        <h1><a href="/">{{ site.title }}<span class="cursor"></span></a></h1>
-    </header>
-    <main id="content">
-    	{{ content }}
-    </main>
-    <footer class="footer">
+<html lang="en-uk">
+  <head>
+    <meta charset="utf-8">
+  	<meta name="description" content="ಠ_ಠ">
+    <meta name="robots" content="all">
+    <meta name="author" content="{{ site.author.name }}" />
+    <title>{{ site.title }}{% if page.title %} | {{ page.title }} {% endif %}</title>
+    <link rel="stylesheet" href="/carlton/banks.css" type="text/css" media="screen" title="banks" charset="utf-8">
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/turbolinks.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-39750141-1', 'drj.xxx');
+      ga('send', 'pageview');
+    </script>
+  </head>
+  <body>
+    <div class="site">
+      <header>
+      <h1><a href="/">{{ site.title }}<span class="cursor"></span></a></h1>
+      </header>
+      <main id="content">
+      {{ content }}
+      </main>
+      <footer class="footer">
       <a href="/">index</a> . 
       <a href="/about">about</a>
-    </footer>
-  </div>
-</body>
+      </footer>
+    </div>
+    <script>
+      $(document).on('page:fetch', function() {
+        return $('#content').fadeOut('fast');
+      });
+
+      $(document).on('page:restore', function() {
+        return $('#content').fadeIn('fast');
+      });
+    </script>
+  </body>
 </html>
