--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,13 @@
 <html lang="en-uk">
   <head>
     <meta charset="utf-8">
-  	<meta name="description" content="ಠ_ಠ">
+    <meta name="description" content="ಠ_ಠ">
     <meta name="robots" content="all">
     <meta name="author" content="{{ site.author.name }}" />
     <title>{{ site.title }}{% if page.title %} | {{ page.title }} {% endif %}</title>
-    <link rel="stylesheet" href="/carlton/banks.css" type="text/css" media="screen" title="banks" charset="utf-8">
+    <link rel="stylesheet" href="/carlton/banks.min.css" type="text/css" media="screen" title="banks" charset="utf-8">
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/turbolinks.js"></script>
+    <script src="/js/turbolinks.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,13 +32,7 @@
       </footer>
     </div>
     <script>
-      $(document).on('page:fetch', function() {
-        return $('#content').fadeOut('fast');
-      });
-
-      $(document).on('page:restore', function() {
-        return $('#content').fadeIn('fast');
-      });
+      $(document).on('page:fetch',function(){return $('#content').fadeOut('fast');}).on('page:restore',function(){return $('#content').fadeIn('fast');});
     </script>
   </body>
 </html>
