--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-uk">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="description" content="ಠ_ಠ">
     <meta name="robots" content="all">
     <meta name="author" content="{{ site.author.name }}" />
