--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,6 @@
     <link rel="stylesheet" href="/carlton/banks.min.css" type="text/css" media="screen" title="banks" charset="utf-8">
     <script src="/js/jquery.min.js"></script>
     <script src="/js/turbolinks.min.js"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-39750141-1', 'drj.xxx');
-      ga('send', 'pageview');
-    </script>
   </head>
   <body>
     <div class="site">
@@ -32,7 +24,7 @@
       </footer>
     </div>
     <script>
-      $(document).on('page:fetch',function(){return $('#content').fadeOut('fast');}).on('page:restore',function(){return $('#content').fadeIn('fast');});
+      $(document).on('page:fetch',function(){return $('#content').fadeOut('fast');}).on('page:restore',function(){return $('#content').fadeIn('fast');});(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-39750141-1', 'drj.xxx');ga('send', 'pageview');
     </script>
   </body>
 </html>
